# msglint

./: .gitignore  .goreleaser.yaml  Cargo.toml  README.md  commit_message.txt
benches/: default_benchmark.rs
src/: cli.rs  lib.rs  main.rs  messages.rs  problems.rs  rules.rs
src/dictionary/: past-participles.txt
