[package]
name = "msglint"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
clap_derive = "4.5.40"
colored = "3.0.0"
regex = "1.11.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "default_benchmark"
harness = false
